syntax = "proto3";

package api;
option go_package = "./;api";

message SumItemRequest {
    int32 value = 2;
}

message SumResponse {
    int32 total = 2;
}

service Sum {
    rpc SumItems(stream SumItemRequest) returns (SumResponse);
}